--- a/index.html
+++ b/index.html
@@ -1,141 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-	<meta charset="utf-8">
+    <title>Sprint Challenge - Home</title>
+    <!--Style sheet link-->
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/5b12ffad4b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-	<title>Sprint Challenge - Home</title>
+  <body>
+    <div>
+      <!-- header -->
+      <header>
+        <div>
+          <a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+        </div>
+        <div>
+          <nav>
+            <a href="menu.html">Menu</a>
+            <a href="#reservations">Reservations</a>
+            <a href="#specialoffers">Special Offers</a>
+            <a href="#contact">Contact</a>
+          </nav>
+        </div>
+		<div>
+		<button><i href="https://fontawesome.com/search?q=facebook&s=solid%2Cbrands"></i></button>	
+		</div>
+      </header>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-	<div>
-		<!-- header -->
-		<header>
+      <!-- gallery section -->
+      <section class="gallery">
+        <div>
+            <h2>OUR FOOD</h2>
+          </div>
+          <div class="photos">
 			<div>
-				BLOOMTECH BAR AND GRILL
-
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
+            <div>
+              <img src="./img/food-avocadotoast.jpg" alt="avocado toast" />
 			</div>
-		</header>
+             <div>
+              <img src="./img/food-burger.jpg" alt="burger" />
+              </div>
+            <div>
+              <img src="./img/food-poutine.jpg" alt="poutine" />
+            </div>
+            <div>
+              <img src="./img/food-ribs.jpg" alt="ribs" />
+		  </div>
+		  <div>
+              <img src="./img/food-sandwich.jpg" alt="sandwich" />
+		  </div>
+		  <div>
+              <img src="./img/food-sausage.jpg" alt="sausage" />
+			  </div>
+		    <div>
+              <img src="./img/food-steak.jpg" alt="steak" />
+            </div>
+             <div>
+              <img src="./img/food-tacos.jpg" alt="tacos" />
+			 </div>
+			 <div>
+              <img src="./img/food-wings.jpg" alt="wings" />
+            </div>
+        </div>
+        </div>
+      </section>
 
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>OUR FOOD</h2>
+      <!-- spacer -->
+      <div class="spacer"></div>
 
-				img/food-avocadotoast.jpg
+      <!-- about section -->
+      <section class="about">
+        <div class="about-container">
+          <h2>ABOUT US</h2>
 
-				img/food-burger.jpg
+          <div id="cooks" class="pic"></div>
 
-				img/food-poutine.jpg
+          <div class="text">
+            <h3>Good Food, Great People</h3>
+            <p>
+              Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short
+              ribs tail<br> dolore, fatback in tempor meatloaf pig sunt porchetta
+              beef. Ad</br> hamburger pig veniam, andouille exercitation cillum
+              eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta
+              frankfurter sed, est t-bone porchetta capicola id tri-tip cillum
+              cow leberkas do minim. Sausage ea velit boudin laboris dolore
+              short loin corned beef commodo jowl beef dolor tempor. Dolor culpa
+              enim in meatloaf, ham mollit shankle duis chicken dolore andouille
+              do tenderloin qui.
+            </p>
+          </div>
 
-				img/food-ribs.jpg
+          <div id="bartender" class="pic"></div>
+        </div>
+      </section>
 
-				img/food-sandwich.jpg
+      <!-- spacer -->
+      <div class="spacer"></div>
 
-				img/food-sausage.jpg
+      <!-- contact section -->
+      <section class="contact">
+        <div class="contact-container">
+          <h2>CONTACT US</h2>
 
-				img/food-steak.jpg
+          <div class="info">
+            <div class="address">
+              <h3>Address</h3>
 
-				img/food-tacos.jpg
+              <address>
+                <p>100 Main St</p>
+                <p>San Francisco, CA</p>
+              </address>
+            </div>
 
-				img/food-wings.jpg
-			</div>
-		</section>
+            <div class="hours">
+              <h3>Hours</h3>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
+              <div>
+                <p>Sunday to Thursday:</p>
+                <p>12:00p - 12:00a</p>
+                <p>Friday and Saturday:</p>
+                <p>12:00p - 4:00a</p>
+              </div>
+            </div>
 
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>ABOUT US</h2>
+            <div class="contacts">
+              <h3>Contacts</h3>
 
-				<div id="cooks" class="pic">
-				</div>
+              <div>
+                <a id="phone" href="tel:999-999-9999">999-999-9999</a>
+                <a id="email" href="mailto:restaurant@bloomtech.com"
+                  >restaurant@bloomtech.com</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-				<div class="text">
-					<h3>Good Food, Great People</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
+      <!-- spacer -->
+      <div class="spacer-sm"></div>
 
-				<div id="bartender" class="pic">
-				</div>
-			</div>
-		</section>
+      <!-- footer -->
+      <footer>
+        <!-- email signup -->
+		<div class="footerinput">
+	 <h4> Join our Mailing list !</h4>
+	 <form>
+		<input class="footer Input" type="text" value="Email Address" id="myInput"/>
+		<button class = "footer Button">Sign Up</button>
+	  </form>
+	  </div>
+        <nav>
+          <a href="menu.html">Menu</a>
+          <a href="#reservations">Reservations</a>
+          <a href="#specialoffers">Special Offers</a>
+          <a href="#contact">Contact</a>
+        </nav>
 
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>CONTACT US</h2>
-
-				<div class="info">
-					<div class="address">
-						<h3>Address</h3>
-
-						<address>
-							<p>100 Main St</p>
-							<p>San Francisco, CA</p>
-						</address>
-					</div>
-
-					<div class="hours">
-						<h3>Hours</h3>
-
-						<div>
-							<p>Sunday to Thursday:</p>
-							<p>12:00p - 12:00a</p>
-							<p>Friday and Saturday:</p>
-							<p>12:00p - 4:00a</p>
-						</div>
-					</div>
-
-					<div class="contacts">
-						<h3>Contacts</h3>
-
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
-
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
-</body>
-
+        <!-- copyright -->
+        ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+      </footer>
+    </div>
+  </body>
 </html>
