--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
       rel="stylesheet"
     />
+	<link href="https://fontawesome.com/search?q=instagram&s=solid%2Cbrands"/>
+	<link href="https://fontawesome.com/search?q=twitter&s=solid%2Cbrands"/>
+	<link href="https://fontawesome.com/search?q=facebook&s=solid%2Cbrands"/>	
     <script
       src="https://kit.fontawesome.com/5b12ffad4b.js"
       crossorigin="anonymous"
@@ -31,10 +34,10 @@
             <a href="#reservations">Reservations</a>
             <a href="#specialoffers">Special Offers</a>
             <a href="#contact">Contact</a>
+			<i class="fa-brands fa-facebook"></i>
+			<i class="fa-brands fa-twitter-square"></i>
+			<i class="fa-brands fa-instagram"></i>
           </nav>
-        </div>
-		<div>
-		<button><i href="https://fontawesome.com/search?q=facebook&s=solid%2Cbrands"></i></button>	
 		</div>
       </header>
 
@@ -154,18 +157,16 @@
       <!-- footer -->
       <footer>
         <!-- email signup -->
-		<div class="footerinput">
+		<nav>
 	 <h4> Join our Mailing list !</h4>
-	 <form>
 		<input class="footer Input" type="text" value="Email Address" id="myInput"/>
 		<button class = "footer Button">Sign Up</button>
-	  </form>
-	  </div>
-        <nav>
+	
           <a href="menu.html">Menu</a>
           <a href="#reservations">Reservations</a>
           <a href="#specialoffers">Special Offers</a>
           <a href="#contact">Contact</a>
+		  </div>
         </nav>
 
         <!-- copyright -->
