--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/menu.css" />
     <title>Sprint Challenge - Menu</title>
 
     <link
@@ -22,14 +22,17 @@
       <!-- header -->
       <header>
         <div>
-          <h1>BLOOMTECH BAR AND GRILL</h1>
+          <a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
         </div>
         <div>
           <nav>
-            <a href="menu.html">Menu></a>
+            <a href="menu.html">Menu</a>
             <a href="#reservations">Reservations</a>
             <a href="#specialoffers">Special Offers</a>
             <a href="#contact">Contact</a>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter-square"></i>
+            <i class="fa-brands fa-instagram"></i>
           </nav>
         </div>
       </header>
