--- a/index.html
+++ b/index.html
@@ -156,22 +156,26 @@
 
       <!-- footer -->
       <footer>
-        <!-- email signup -->
+	  <div class="footer-container"></div>
+	  <div class="footer">
+        <!--Email-->
+		<div class ="footer-input">
+		<h4> Join our Mailing list !</h4>
+		<input type ="email" placeholder="Email Address" id="footer-input">
+		<button><input type="submit" value ="Sign Up" id="footer-email-btn"></button>
+		</div>
 		<nav>
-	 <h4> Join our Mailing list !</h4>
-		<input class="footer Input" type="text" value="Email Address" id="myInput"/>
-		<button class = "footer Button">Sign Up</button>
-	
           <a href="menu.html">Menu</a>
           <a href="#reservations">Reservations</a>
           <a href="#specialoffers">Special Offers</a>
-          <a href="#contact">Contact</a>
-		  </div>
+          <a href="#contact">Contact</a>	
         </nav>
 
         <!-- copyright -->
         ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+
       </footer>
-    </div>
+	</div>
+</div>
   </body>
 </html>
