--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </nav>
 
         <!-- copyright -->
-        ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+       <p class ="copyright" >©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
 
       </footer>
 	</div>
