--- a/menu.html
+++ b/menu.html
@@ -43,108 +43,147 @@
       <!-- menu -->
 
       <article class="menu">
-          <div class ="menu-container">
-              <h2>Food & Drink </h2>
-              <section class ="menu-section">
-                <div>
-                   <h4> Drinks </h4>
-               </div>
-              <div class="menu-item">
-                 <h4>Soda </h4><h4> $2 </h4>
-                     <p>Coke products </p>
-              </div>
-              <div class = "menu-item">
-                 <h4> Coffee</h4><h4> $2 </h4>
-                   <p> Cream and sugar available upon request</p>
-             </div>  
-             <div class="menu-item">
-                 <h4>Beer </h4><h4> $5</h4>
-                    <p> Delicious and refreshing</p>
-             <div class="menu-item">
-                 <h4> Wine </h4> <h4>$5</h4>
-             <div class="menu-item">
-                 <h4> Light and fruity Cocktail</h4><h4> $10</h4>
-                    <p>Ask about our specials</p>
-             </div>
-                </section>
-
-
-             <section class="menu-section">
-             <div>
-                <h4> Appetizers</h4>
-            </div>
-            <div class ="menu-item">
-                <h4> Fried Pickles </h4><h4>$6 </h4>
-                 <p>Golden and crispy with tang!</p>
-                 <p> (V)</p>
+        <div class="menu-container">
+          <h2>Food & Drink</h2>
+          <section class="menu-section">
+            <div>
+              <h3>Drinks</h3>
             </div>
             <div class="menu-item">
-            <h4> Buffalo Wings </h4><h4>$10 </h4>
-              <p> 5 wings per order;mild, medium, or hot sauce and served with bleu cheese/ranch and carrot
-        sticks</p>
-            <p> (GF) </p>
-           <div class ="menu-item">
-           <h4> Poutine </h4><h4>$5 </h4>
-           <p> Homemade fries topped with everything but the kitchen sink</p>
-        </section>
+              <h4>Soda</h4>
+              <h4>$2</h4>
+              <p>Coke products</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Coffee</h4>
+              <h4>$2</h4>
+              <p>Cream and sugar available upon request</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Beer</h4>
+              <h4>$5</h4>
+              <p>Delicious and refreshing</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Wine</h4>
+              <h4>$5</h4>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Light and fruity Cocktail</h4>
+              <h4>$10</h4>
+              <p>Ask about our specials</p>
+              <p>(GF)</p>
+            </div>
+          </section>
 
-        <section class="menu-section">
-           <div>
-           <h4> Soup and Salad House Salad </h4>
-         </div>
-         <div class="menu-item">
-           <h4> Spinach and arugala </h4><h4>$8</h4>
-            <p> with all the good veggies; add chicken for $6</p>
-          <p> (GF, V) </p>
-        </div>
-          <div class="menu-item">
-           <h4>French Onion Soup</h4><h4> $4 </h4>
-           <p> Served with a thick topping of cheese and delicious bread </p>
-          </div>
-        <div class ="menu-item">
-          <h4>Cheddar Broccoli Soup </h4><h4>$5 </h4>
-          <p>Creamy and filling</p>
-           <p> (GF)</p>
-        </div>
-        </section>
-
-         <section class = "menu-section">
-         <div>
-         <h3> Entrees</h3>
-       </div>
-        <div class ="menu-item">
-        <h4> Ribeye Steak</h4> <h4>$32</h4>
-        <p>Served with mashed potatoes and roasted asparagus </p>
-        </div>
-        <div class="menu-item">
-         <h4>Big Boy Burger</h4><h4>$14</h4> 
-        <p>Beef or black bean burger on homemade bun served with fries Black Bean Burger:<p><p> (V) </p>
-        </div>
-        <div class="menu-item">
-        <h4>Pork Shortrib</h4><h4>$18</h4> 
-       <p> Melt off the bone finger food </p>
-       <p>(GF)</p>
-       </div>
-       </section>
-
-        <section class ="menu-section">
+          <section class="menu-section">
             <div>
-       <h3> Desserts </h3>
-        </div>
-        <div class ="menu-item">  
-       <h4> Flourless Chocolate Cake </h4><h4> $7 </h4> 
-      <p> Gooey and chocolatey heaven<p>
-      </p>(GF)<p>
-      </div>
-    <div class ="menu-item">
-      <h4> Cookies and Ice Cream </h4><h4> $6 </h4>
-     <p> Choose 2 cookies and 1 scoop of ice cream from an assortment </p>
-        </div>
-        <div class ="menu-item">
-        <h4>  CremeBrulee </h4><h4> $8 </h4>
-        <p> scorched top containing a perfect, smooth custard<p>
-     <p> (GF)</p>
-        </section>
+              <h3>Appetizers</h3>
+            </div>
+            <div class="menu-item">
+              <h4>Fried Pickles</h4>
+              <h4>$6</h4>
+              <p>Golden and crispy with tang!</p>
+              <p>(V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Buffalo Wings</h4>
+              <h4>$10</h4>
+
+              <p>
+                5 wings per order;mild, medium, or hot sauce and served with
+                bleu cheese/ranch and carrot sticks
+              </p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Poutine</h4>
+              <h4>$5</h4>
+              <p>Homemade fries topped with everything but the kitchen sink</p>
+              <p>(GF)</p>
+            </div>
+          </section>
+
+          <section class="menu-section">
+            <div>
+              <h3>Soup and Salad House Salad</h3>
+            </div>
+            <div class="menu-item">
+              <h4>Spinach and arugala</h4>
+              <h4>$8</h4>
+              <p>with all the good veggies; add chicken for $6</p>
+              <p>(GF, V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>French Onion Soup</h4>
+              <h4>$4</h4>
+              <p>Served with a thick topping of cheese and delicious bread</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Cheddar Broccoli Soup</h4>
+              <h4>$5</h4>
+              <p>Creamy and filling</p>
+              <p>(GF)</p>
+            </div>
+          </section>
+
+          <section class="menu-section">
+            <div>
+              <h3>Entrees</h3>
+            </div>
+            <div class="menu-item">
+              <h4>Ribeye Steak</h4>
+              <h4>$32</h4>
+              <p>Served with mashed potatoes and roasted asparagus</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Big Boy Burger</h4>
+              <h4>$14</h4>
+              <p>
+                Beef or black bean burger on homemade bun served with fries
+                Black Bean Burger:
+              </p>
+              <p>(V)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Pork Shortrib</h4>
+              <h4>$18</h4>
+              <p>Melt off the bone finger food</p>
+              <p>(GF)</p>
+            </div>
+          </section>
+
+          <section class="menu-section">
+            <div>
+              <h3>Desserts</h3>
+            </div>
+            <div class="menu-item">
+              <h4>Flourless Chocolate Cake</h4>
+              <h4>$7</h4>
+              <p>Gooey and chocolatey heaven</p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>Cookies and Ice Cream</h4>
+              <h4>$6</h4>
+              <p>
+                Choose 2 cookies and 1 scoop of ice cream from an assortment
+              </p>
+              <p>(GF)</p>
+            </div>
+            <div class="menu-item">
+              <h4>CremeBrulee</h4>
+              <h4>$8</h4>
+              <p>scorched top containing a perfect, smooth custard</p>
+              <p>(GF)</p>
+            </div>
+          </section>
         </div>
       </article>
 
@@ -154,23 +193,27 @@
       <!-- footer -->
       <footer>
         <div class="footer-container"></div>
-	  <div class="footer">
-        <!--Email-->
-		<div class ="footer-input">
-		<h4> Join our Mailing list !</h4>
-		<input type ="email" placeholder="Email Address" id="footer-input">
-		<button><input type="submit" value ="Sign Up" id="footer-email-btn"></button>
-		</div>
-		<nav>
-          <a href="menu.html">Menu</a>
-          <a href="#reservations">Reservations</a>
-          <a href="#specialoffers">Special Offers</a>
-          <a href="#contact">Contact</a>	
-        </nav>
+        <div class="footer">
+          <!--Email-->
+          <div class="footer-input">
+            <h4>Join our Mailing list !</h4>
+            <input type="email" placeholder="Email Address" id="footer-input" />
+            <button>
+              <input type="submit" value="Sign Up" id="footer-email-btn" />
+            </button>
+          </div>
+          <nav>
+            <a href="menu.html">Menu</a>
+            <a href="#reservations">Reservations</a>
+            <a href="#specialoffers">Special Offers</a>
+            <a href="#contact">Contact</a>
+          </nav>
 
-        <!-- copyright -->
-       <p class ="copyright" >©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</p>
-
+          <!-- copyright -->
+          <p class="copyright">
+            ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
